-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.883 2011-03-21 18:36:46 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2011-03-21	pwessel
	* dbase/grdraster_func.c:	Better testing and return of errors.

2011-03-19	jluis
	* gmt_gdalread.c	Add code to do pixel interleaving of char arrays.
				Handle new complex choice of 0,1,2
	* gmt_gdalread.h	Add two members to the GDALREAD_CTRL struct to deal with Pixel 
				interleaving and put data into complex arrays 
	* gmt_customio.c	GMT_gdal_read_grd now handles the complex case too.

2011-03-18	pwessel
	* pstext_func.c:	Added -E to use text for setting up clipping only.
	* gmt_support.c:	Added +e to contlabel options to use text for setting up clipping only
				and delay plotting the text until psclip -Ct.  Affects grdcontour,
				pscontour, and psxy -Sq text placement.
	* psclip_func.c:	Added -Ct to terminate text-based clip path and plot the text.
	* grdfft_func.c:	Let -E optionally use -G to set output file name [Default is stdout].
	* gmt_grdio.c:		Added GMT_init_complex to centralize setting of stride (1 or 2)
				and offset (0 = real, 1 = imag).

2011-03-17	pwessel
	* configure.ac:		Only set DSYMUTIL when using shared libraries.
	* gmt_mgg_header2.c:	Now supports correct padding and complex setting
	* gmt_agc_io.c:		Handle new complex choice of 0,1,2
	* gmt_esri_io.c:	---"---
	* gmt_agc_io.c:		---"---
	* gmt_nc.c:		---"---
	* gmt_cdf.c:		---"---
	* gmt_customio.c:	---"---

2011-03-14	pwessel
	* GMT5 branch merged to the trunk and pruned of GMT 4 files.  We now have a
	  working GMT5 module in the repository.
	* pslib.c:		Changed versions of PSL_prologue/label.ps to match the
				new numbers after the merge back to the trunk.
-----------------------------------------------------------------------------------------