@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: greenspline_func.c,v 1.2 2011-03-15 02:06:36 guru Exp $
+ *	$Id: greenspline_func.c,v 1.3 2011-03-21 20:00:13 guru Exp $
  *
  *	Copyright (c) 1991-2011 by P. Wessel, W. H. F. Smith, R. Scharroo, and J. Luis
  *	See LICENSE.TXT file for copying and redistribution conditions.
@@ -1742,7 +1742,6 @@ GMT_LONG GMT_greenspline (struct GMTAPI_CTRL *API, struct GMT_OPTION *options)
 			Grid->header->inc[GMT_Y] = Ctrl->I.inc[GMT_Y];
 			GMT_RI_prepare (GMT, Grid->header);	/* Ensure -R -I consistency and set nx, ny */
 			GMT_err_fail (GMT, GMT_grd_RI_verify (GMT, Grid->header, 1), Ctrl->G.file);
-			GMT_grd_setpad (Grid->header, GMT->current.io.pad);	/* Assign default pad */
 			GMT_set_grddim (GMT, Grid->header);
 			if (dimension == 3) {	/* Also set nz */
 				Z.z_min = Ctrl->R3.range[4];	Z.z_max = Ctrl->R3.range[5];
